# churchroad

./: .dockerignore  .env.template  .gitmodules  Cargo.toml  Dockerfile  README.md  dependencies.sh  fmt.sh  requirements.txt  run-tests.sh
.github/workflows/: built-test-check-format.yml  run-checks-github-runners.yml
egglog_src/: churchroad.egg  lakeroad.egg  module_enumeration_rewrites.egg
src/: global_greedy_dag.rs  lib.rs  main.rs
src/from_verilog/: from_verilog.py
tests/: egglog_tests.rs  interpreter_tests.rs  type_inference_tests.rs
tests/egglog_tests/: agilex_alm.egg  construct_sequential_cycle.egg  counter_typing.egg  half_adder.egg  typing.egg
tests/integration_tests/: lit.cfg  mul_32_32_64.v  simple_mul.v  wide_mul.v
tests/interpreter_tests/: ALU.egg  LUT6-modified.egg  Makefile.template  lut6-modified-old.egg  lut6.egg
tests/interpreter_tests/verilog/: LUT6-modified.v  testbench.sv.template
tests/type_inference_tests/: logic_and.egg
yosys-plugin/: .gitignore  Makefile  README.md  churchroad.cc  churchroad.d  example.ys  run_tests.sh
yosys-plugin/tests/: 2bit-rca.sv  adder.sv  bsg_mul.ys  concat.sv  dsp48e2.sv  example.ys  extract-bug.sv  lit.cfg  module-instance.sv  permuter.sv  register.egg  register.v  register.ys  shiftx.sv  simple-mux.ys  simple.sv  simple.sv.expect  simple_alu.ys  wide-fma.sv
yosys-plugin/tests/bsg_mul/: .gitignore  README.md  bsg_mul.v  bsg_mul_pipelined.v  top.v  top_script.ys
yosys-plugin/tests/extra_extract/: alu.sv  alu_script.ys  decoder.sv  mycells.lib  out.egg
yosys-plugin/tests/simple_alu/: mycells.v
(+7 files in other folders)
