[package]
name = "churchroad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egglog = { git = "https://github.com/egraphs-good/egglog", rev = "799c1be7e239870306529486e7585d84961888c1" }
log = "0.4.20"
egraph-serialize = "0.1"
rand = "0.8.4"
indexmap = "2.0.0"
clap = "4.5.8"
tempfile = "3.10.1"